--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>ConvAI</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>	
 </head>
 <body>
 
