really, this time

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 
 		<div class="down-scroll">
-			<img src="scroll.svg">
+			<img class="scroll-img" src="scroll.svg">
 		</div>
  	</div>
 
