Spent a lot of time on a little animation.

--- a/index.html
+++ b/index.html
@@ -16,17 +16,32 @@
 		<span class="name-end"> AI</span>
 	</div>
  -->
- 	<div class="container">
-		<div class=" logo-container">
-			<span class="name-start">Conv</span><span class="expansion">ersational</span>
-			<span class="name-end"> AI</span>
+ 	<div class="page-one " id="brand">
+		<div class="logo-container">
+			<span class="name-start logo-span">Conv</span><span id="expansion" class="logo-span expansion">ersational </span>
+			<span class="name-end logo-span">AI</span>
 		</div>
 
-		<div class="down-scroll">
+		<div class="downscroll">
 			<img class="scroll-img" src="scroll.svg">
 		</div>
  	</div>
 
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
+	<p>Stuff</p>
 
 
 </body>
