Did some stuff Gonna need one helluva cleanup

--- a/index.html
+++ b/index.html
@@ -16,18 +16,79 @@
 		<span class="name-end"> AI</span>
 	</div>
  -->
- 	<div class="page-one " id="brand">
+<!--  	<div class="page-one " id="brand">
 		<div class="logo-container">
 			<span class="name-start logo-span">Conv</span><span id="expansion" class="logo-span expansion">ersational </span>
 			<span class="name-end logo-span">AI</span>
 		</div>
 
+		<div id="description" class="container">
+			<p class="desc">A speculative vision for an operating system designed specifically for the blind and handicapped, driven by humane design principles and advanced artificial intelligence.</p>
+		</div>
+
 		<div class="downscroll">
 			<img class="scroll-img" src="scroll.svg">
 		</div>
+ 	</div> -->
+
+ 	<div id="story" class="container page">
+ 		<h2 class="storyhead subhead">The story</h2>
+ 		<p class="storybody subbody">My breakthrough came when I realised that I had been asking all the wrong questions. I had spent weeks trying to invent new ways to navigate existing systems, but what if those systems were fundamentally flawed? What if the experience required a radical reinvention of everything, the whole OS designed specifically with voice and simple interactions in mind capitulated by intelligent predictions.
+
+		After all if we strip away all the chrome, all the Aero and Paper and Frosted Glass, all the evidence of the “design systems” companies have poured billions into developing and maintaining, we come face to face with a skeleton of XEROX PARC’s 1973 invention. The desktop was never meant to work for the blind or handicapped, all efforts to extend the capabilities, in the end, they were all just crude workarounds, band-aids on a rotting wound.
+		</p>
  	</div>
 
-	<p>Stuff</p>
+ 	<div id="problem" class="container page">
+ 		<h2 class="problemhead subhead">The problem</h2>
+ 		<p class="problembody subbody">Before creating any great solution, a designer must come in terms with the problems that exist. After a bit of reading, I found a book “The Humane Interface”, in which Jef Raskin (the founder of the Macintosh project) asserted that the desktop interface strategy was “inefficient and inhumane”. 
+
+		The key arguments he put forth were :- 
+
+		The Desktop environment enables Applications to exist.
+		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
+
+		The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.
+
+		File naming and organisation as a whole is an exercise in futility.
+		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
+
+		</p>
+ 	</div>
+ 	<div id="pro" class="container page">
+ 		<h2 class="problemhead subhead">The problem</h2>
+ 		<p class="problembody subbody">Before creating any great solution, a designer must come in terms with the problems that exist. After a bit of reading, I found a book “The Humane Interface”, in which Jef Raskin (the founder of the Macintosh project) asserted that the desktop interface strategy was “inefficient and inhumane”. 
+
+		The key arguments he put forth were :- 
+
+		The Desktop environment enables Applications to exist.
+		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
+
+		The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.
+
+		File naming and organisation as a whole is an exercise in futility.
+		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
+
+		</p>
+ 	</div>
+ 	<div id="blem" class="container page">
+ 		<h2 class="problemhead subhead">The problem</h2>
+ 		<p class="problembody subbody">Before creating any great solution, a designer must come in terms with the problems that exist. After a bit of reading, I found a book “The Humane Interface”, in which Jef Raskin (the founder of the Macintosh project) asserted that the desktop interface strategy was “inefficient and inhumane”. 
+
+		The key arguments he put forth were :- 
+
+		The Desktop environment enables Applications to exist.
+		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
+
+		The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.
+
+		File naming and organisation as a whole is an exercise in futility.
+		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
+
+		</p>
+ 	</div>
+
+	<p class="placeholder">Stuff</p>
 	<p>Stuff</p>
 	<p>Stuff</p>
 	<p>Stuff</p>
