Added the front page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 <body>
 
 
-<!-- 
-	<div class=" logo-container">
-		<span class="name-start">Conv</span>
-		<span class="name-end"> AI</span>
-	</div>
- -->
-<!--  	<div class="page-one " id="brand">
+ 	<div class="page-one " id="brand">
 		<div class="logo-container">
 			<span class="name-start logo-span">Conv</span><span id="expansion" class="logo-span expansion">ersational </span>
 			<span class="name-end logo-span">AI</span>
@@ -29,7 +23,7 @@
 		<div class="downscroll">
 			<img class="scroll-img" src="scroll.svg">
 		</div>
- 	</div> -->
+ 	</div>
 
  	<div id="story" class="container page">
  		<h2 class="storyhead subhead">The story</h2>
@@ -87,22 +81,8 @@
 
 		</p>
  	</div>
-
-	<p class="placeholder">Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
-	<p>Stuff</p>
+	
+	<p class="placeholder"> </p>
 
 
 </body>
