Tried to cleanup

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
 
 		The key arguments he put forth were :- 
 
-		The Desktop environment enables Applications to exist.
+		
+		<li><b>The Desktop environment enables Applications to exist.</b></li>
+
 		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
 
-		The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.
-
-		File naming and organisation as a whole is an exercise in futility.
+		<li><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
+				
+		<li><b>File naming and organisation as a whole is an exercise in futility.</b></li>
+		
+		
 		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
 
 		</p>
@@ -55,12 +59,16 @@
 
 		The key arguments he put forth were :- 
 
-		The Desktop environment enables Applications to exist.
+		
+		<li><b>The Desktop environment enables Applications to exist.</b></li>
+
 		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
 
-		The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.
-
-		File naming and organisation as a whole is an exercise in futility.
+		<li><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
+				
+		<li><b>File naming and organisation as a whole is an exercise in futility.</b></li>
+		
+		
 		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
 
 		</p>
