--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+	<div class="navcontrols">
+		<img class="up" src="up.svg">
+		<img class="down" src="down.svg">
+	</div>
 
  	<div class="page-one " id="brand">
 		<div class="logo-container">
@@ -23,6 +27,8 @@
 		<div class="downscroll">
 			<img class="scroll-img" src="scroll.svg">
 		</div>
+
+
  	</div>
 
  	<div id="story" class="container page">
@@ -40,36 +46,30 @@
 		The key arguments he put forth were :- 
 
 		
-		<li><b>The Desktop environment enables Applications to exist.</b></li>
+		<li class="subbody"><b>The Desktop environment enables Applications to exist.</b></li>
+		<p class="problembody subbody">
+		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.</p>
 
-		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
-
-		<li><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
+		<li class="subbody"><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
 				
-		<li><b>File naming and organisation as a whole is an exercise in futility.</b></li>
+		<li class="subbody"><b>File naming and organisation as a whole is an exercise in futility.</b></li>
 		
-		
-		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
+		<p class="problembody subbody">
+		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.</p>
 
 		</p>
  	</div>
  	<div id="pro" class="container page">
- 		<h2 class="problemhead subhead">The problem</h2>
- 		<p class="problembody subbody">Before creating any great solution, a designer must come in terms with the problems that exist. After a bit of reading, I found a book “The Humane Interface”, in which Jef Raskin (the founder of the Macintosh project) asserted that the desktop interface strategy was “inefficient and inhumane”. 
+ 		<h2 class="problemhead subhead">The idea</h2>
+ 		<p class="problembody subbody">The core idea is to create an OS that responds to human intent, driven by simple conversations. An OS designed with short predictable interactions where the user is heavily assisted by an AI, thereby reducing cognitive load.  
 
-		The key arguments he put forth were :- 
+		Redesign the entire OS following 3 fundamental rules - 
+		<ol class="subbody">
+			<li><b>Natively Conversable</b></li>
+			<li><b>Focused and Predictable</b></li>
+			<li><b>Fast and Fluid</b></li>
+		</ol>
 
-		
-		<li><b>The Desktop environment enables Applications to exist.</b></li>
-
-		Apps are modes, and anything modal in an interface sets the user up for errors and slips. Plus, the more ways there are to do something, the more complex interactions become and harder to achieve through voice.
-
-		<li><b>The Desktop’s reliance on the mouse as a pointing device made the entire system harder and inefficient to navigate.</b></li>
-				
-		<li><b>File naming and organisation as a whole is an exercise in futility.</b></li>
-		
-		
-		When saving a document, for example, our locus of attention is not on coming up with a unique and memorable name—we just want to save our work. Seemingly minor moments of friction such as this burdens our cognitive load, distracting us from our intentions and from entering flow state.
 
 		</p>
  	</div>
