got rid of some stuff

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<p class="desc">A speculative vision for an operating system designed specifically for the blind and handicapped, driven by humane design principles and advanced artificial intelligence.</p>
 		</div>
 
-		<div class="downscroll">
+<!-- 		<div class="downscroll">
 			<img class="scroll-img" src="scroll.svg">
-		</div>
+		</div> -->
 
 
  	</div>
