--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
  			<p>The user is presented with a birds-eye view of every action inside the space. </p>
  			
  			<img class="container m-5"  src="overview.png">
+
+ 			<h2>Examples</h2>
+
+ 			<p>Here are some examples</p>
+ 			
+ 			<img class="container m-5"  src="overview.gif">
+ 			<img class="container m-5"  src="example.gif">
 		</p>
  	</div>
  	<div id="placeholder" class="container page">
