Stopped playing around.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 </head>
 <body>
 
-	<div class="navcontrols">
-		<img class="up" src="up.svg">
-		<img class="down" src="down.svg">
-	</div>
-
  	 <div class="page-one " id="brand">
 		<div class="logo-container">
 			<span class="name-start logo-span">Conv</span><span id="expansion" class="logo-span expansion">ersational </span>
@@ -107,7 +102,7 @@
  			<img class="container m-5"  src="example.gif">
 		</p>
  	</div>
- 	<div id="placeholder" class="container page">
+ 	<div id="goodbye" class="container page">
 		<h1>More to follow.</h1>
  	</div>
 	
