--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>ConvAI</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="loadBlog.js"></script>
 </head>
 <body>
 
+	<a href="week2.html"><div class="updates">Latest research analysis</div></a>
  	 <div class="page-one " id="brand">
 		<div class="logo-container">
 			<span class="name-start logo-span">Conv</span><span id="expansion" class="logo-span expansion">ersational </span>
@@ -17,6 +19,8 @@
 		<div id="description" class="container">
 			<p class="desc">A speculative vision for an operating system designed specifically for the blind and handicapped, driven by humane design principles and advanced artificial intelligence.</p>
 		</div>
+
+
 
 		<div class="downscroll">
 			<img class="scroll-img" src="scroll.svg">
