--- a/index.html
+++ b/index.html
@@ -26,10 +26,37 @@
 	<div class="timeline">
 		<div class="timeline-container right right-first">
 			<div class="content time-first">
+				6th july
+			</div>
+			<div id="week-two">
+				<div id="story" class="container page">
+
+<!-- =============================================================================================== -->
+<!-- =============================================================================================== -->
+<!--  ADD CONTENT HERE. USE CLASSES 'mainhead', 'subbody' and 'subhead' for formatting. -->
+<!-- =============================================================================================== -->
+<!-- =============================================================================================== -->
+					<h1 class="mainhead">Analysis of current scenario</h1>
+					<p class="subbody"> We investigated the technical difficulties and technical assistance the blind people experienced with computers and computing applications.
+						Today's society is one that depends heavily on technology, particularly the use of computers. From banking to sending a basic email, computers have become quintessential part of our lifes.
+					</p>
+					<h1 class="subhead">Method</h1>
+					<p class="subbody"> We visited a local Blind and Handicapped school. We also contacted adults who had no remaining functional vision. The questions focused on frequency, nature and cause of issues.<br>
+						Conclusions: We noticed that most of the issues that were observed in both adults and students were mostly similar barring that student mostly faced issued with getting used to some technologies and the learning curve involved with it.
+					</p>
+<!-- =============================================================================================== -->
+<!-- =============================================================================================== -->
+<!-- =============================================================================================== -->
+
+				</div>
+			</div>
+		</div>
+		<div class="timeline-container right">
+			<div class="content">
 				30th june
 			</div>
 			<div id="week-one">
-				<div id="story" class="container page">
+				<div class="container page">
 					<h1 class="mainhead">Analysis of current scenario</h1>
 					<p class="subbody"> We investigated the technical difficulties and technical assistance the blind people experienced with computers and computing applications.
 						Today's society is one that depends heavily on technology, particularly the use of computers. From banking to sending a basic email, computers have become quintessential part of our lifes.
@@ -101,16 +128,11 @@
 							<h2>Overview</h2>
 							<p>The user is presented with a birds-eye view of every action inside the space. </p>
 							<img class="container m-5" src="overview.png">
-							<h2>Examples</h2>
-							<p>Here are some examples</p>
-							<img class="container m-5" src="overview.gif">
-							<img class="container m-5" src="example.gif">
 						</p>
 				</div>
 			</div>
 		</div>
-
-<!-- 	<div id="goodbye" class="container page">
+		<!-- 	<div id="goodbye" class="container page">
 		<h1>More to follow.</h1>
 	</div>
 	<p class="placeholder"> </p> -->
