--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 					<h1 class="subhead">Problem 3 - Grid and Menus</h1>
 					<iframe width="900" height="506" src="https://www.youtube.com/embed/U8T81ZvlfMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</iframe>
-					<p class="subbody">In this video, the student is painfully navigating the menu screen that we take for granted. Grids menus lists etc are not created following humane principles of design and must be completely rethought in-order to make it easily accessible.
+					<p class="subbody">In this video, the student is painfully navigating the menu screen that we take for granted. Grids menus lists etc are not created following humane principles of design and must be completely rethought in-order to make it easily accessible. Even though most kids have memorised the qwerty keyboard layout by now, using the touch keyboard on a phone still proves tiresome.
 					</p>					
 					<h1 class="subhead">Problem 4 - Limitations in Google Assistant</h1>
 					<iframe width="900" height="506" src="https://www.youtube.com/embed/_9UfTQDfXlE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</iframe>
 					<p class="subbody">Students find it very easy to use voice assistants but currently the interface is hard to navigate due to the inconsistency in outputs.<br>
-We have created a system which we believe addresses these problems and next week we would show videos of the system being used by the students to complete basic tasks, and to collect their feedback and improve on that. Also we would post about our meeting with Mr Satyan Sir, who his himself visually impaired and has worked in this field all his lifetime.
+We have created a system which we believe addresses these problems and next week we would show videos of the system being used by the students to complete basic tasks, and to collect their feedback and improve on that. Also we would post about our meeting with Mr Satyan Sir, who himself is visually impaired and has worked in this field all his lifetime.
 
 					</p>
 					<img src="children.jpg" class="container m-5">
